--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Outcome.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,42 +12,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Outcome</title>
     <style>
-      .m{
-        margin-top: 100px;
-      }
-      .mq{
-        margin-top:64px
-      }
-      .text-center{
-        text-align: center;
-      }
-      #text-white{
-        color: aliceblue;
-        text-decoration: none;
-      }
-      .icono{
-        height: 100px;
-      }
-      .mt{
-        margin-top: 200px;
-      }
-      .mt-3{
-        margin-top: 10px;
-      }
-      .mw{
-        margin:60px
-      }
-      .ava{
-        border-radius: 50%;
-      }
-      .margino{
-        margin-top: 500px;
-      }
-      .mb{
-        margin-bottom: 50px;
-      }
     </style>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   </head>
